# ElkoJob-Backend

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt
Ejobhub/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: serializers.py  urls.py
candidates/: __init__.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
candidates/migrations/: 0001_initial.py
employers/: models.py  permissions.py  serializers.py  urls.py  views.py
